
   .. replacement:: sort-option-link

      the :ref:`kotlin-sync-client-bulk-write-update` and
      :ref:`kotlin-sync-client-bulk-write-replace` sections of the Bulk Write
      Operations guide

   .. replacement:: k8s-link

      the :ref:`MONGODB-OIDC: Kubernetes <kotlin-sync-auth-kubernetes>`
      section of the Enterprise Authentication Mechanisms guide

.. _kotlin-sync-version-5.3:

What's New in 5.3
-----------------

The 5.3 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.3-wn-items.rst

   .. replacement:: vector-type-example-link

      To learn about this type, see the
      `BinaryVector <{+java-api+}/apidocs/bson/org/bson/BinaryVector.html>`__
      API documentation.

   .. replacement:: update-replace-example-link

      the :ref:`kotlin-sync-write-update`,
      :ref:`kotlin-sync-write-replace`, and
      :ref:`kotlin-sync-bulk-write` guides

- Support for using builders class methods directly with data class
  properties. To learn more, see the :ref:`kotlin-sync-builders-data-classes`
  guide. This functionality is supported by the `{+driver-short+}
  Extensions package <{+java-api+}/apidocs/mongodb-driver-kotlin-extensions/index.html>`__
  published with this release.

- Implements a *client* bulk write API that allows you to perform write
  operations on multiple databases and collections in the same call. To learn
  more about this feature, see the :ref:`kotlin-sync-client-bulk-write`
  section of the Bulk Write Operations guide.

.. _kotlin-sync-version-5.2:

What's New in 5.2
-----------------

.. important:: Removal of Support for {+mdb-server+} 3.6

   {+driver-short+} v5.2 removes support for {+mdb-server+} 3.6. To
   learn more about compatible versions of the server, see
   :ref:`kotlin-sync-compatibility`.

The 5.2 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: avs-index-link
