@@ -1,8 +1,9 @@
 define: prefix docs/languages/kotlin/kotlin-sync-driver
 define: base https://www.mongodb.com/${prefix}
-define: versions v5.1 v5.2 v5.3 master
+define: versions v5.1 v5.2 v5.3 v5.4 master
 
-symlink: current -> master
+symlink: upcoming -> master
+symlink: current -> v5.4
 
 # raw: <source file> -> ${base}/<destination>
 
