@@ -1,10 +1,11 @@
 name = "kotlin-sync"
 title = "Kotlin Sync Driver"
 
-intersphinx = [ "https://www.mongodb.com/docs/manual/objects.inv",
-                "https://www.mongodb.com/docs/drivers/objects.inv",
-                "https://www.mongodb.com/docs/atlas/objects.inv"
-              ]
+intersphinx = [
+    "https://www.mongodb.com/docs/manual/objects.inv",
+    "https://www.mongodb.com/docs/drivers/objects.inv",
+    "https://www.mongodb.com/docs/atlas/objects.inv",
+]
 
 toc_landing_pages = [
     "/write-operations",
@@ -15,7 +16,7 @@ toc_landing_pages = [
     "work-with-indexes",
     "/data-formats",
     "/builders",
-    "/aggregation"
+    "/aggregation",
 ]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
@@ -24,7 +25,7 @@ sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
 driver-long = "MongoDB Kotlin Sync Driver"
 driver-short = "Kotlin Sync driver"
 language = "Kotlin"
-version-number = "5.3"
+version-number = "5.4"
 full-version = "{+version-number+}.0"
 version = "v{+version-number+}"
 mdb-server = "MongoDB Server"
