@@ -73,8 +73,8 @@ To monitor command events, create a class that implements the
 ``MongoClient`` instance.
 
 For more information on MongoDB database commands, see the 
-:manual:`MongoDB manual entry on database commands </reference/command/>`in 
-the {+mdb-server+} manual.
+:manual:`MongoDB manual entry on database commands
+</reference/command/>` in the {+mdb-server+} manual.
 
 .. note:: Internal Commands
 
