@@ -137,6 +137,15 @@ methods described in the preceding section to manually manage the transaction li
 
 .. sharedinclude:: dbx/transactions-parallelism.rst
 
+
+   .. replacement:: driver-specific-content
+
+      If you're using {+mdb-server+} v8.0 or later, you can perform
+      write operations on multiple namespaces within a single
+      transaction by using bulk write operations. To learn more, see the
+      :ref:`kotlin-sync-client-bulk-write` section of the Bulk Write
+      Operations guide.
+
 Additional Information
 ----------------------
 
