@@ -42,6 +42,11 @@ and features:
       the :ref:`MONGODB-OIDC: Kubernetes <kotlin-sync-auth-kubernetes>`
       section of the Enterprise Authentication Mechanisms guide
 
+   .. replacement:: atlas-query-operators
+
+      the `SearchOperator <{+core-api+}/com/mongodb/client/model/search/SearchOperator.html>`__
+      interface API documentation
+
 .. _kotlin-sync-version-5.3:
 
 What's New in 5.3
@@ -90,6 +95,12 @@ The 5.2 driver release includes the following new features,
 improvements, and fixes:
 
 .. sharedinclude:: dbx/jvm/v5.2-wn-items.rst
+
+   .. replacement:: csot-link
+
+      the `MongoClientSettings.Builder.timeout()
+      <{+core-api+}/com/mongodb/MongoClientSettings.Builder.html#timeout(long,java.util.concurrent.TimeUnit)>`__
+      API documentation
 
    .. replacement:: avs-index-link
 
